--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+# General Project related
+.DS_Store
+Referenced Packages/
+salesforce.schema
+target/
+temp/
+local.build.properties
+/zdoc/
+/deploy/*
+/config/
+/debug/
+scratch.txt
+**/dep-dir.txt
+
+# MavensMate IDE related
+*mm.log
+*.sublime-build
+*.sublime-project
+*.sublime-settings
+*.sublime-workspace
+.sublime-project
+.tm_properties
+
+# Eclipse IDE Related
+.project
+.settings/
 /Perfomance Testing Information.docx
 /Rule Engine.xlsx
