--- a/src/package.xml
+++ b/src/package.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>AndOperation</members>
+        <members>BaseType</members>
+        <members>CparenthesisOperation</members>
+        <members>EqualsOperation</members>
+        <members>Expression</members>
+        <members>ExpressionException</members>
+        <members>GreaterEqualOperation</members>
+        <members>GreaterOperation</members>
+        <members>LessEqualOperation</members>
+        <members>LessOperation</members>
+        <members>NotOperation</members>
+        <members>OparenthesisOperation</members>
+        <members>Operation</members>
+        <members>OperationFactory</members>
+        <members>Operations</members>
+        <members>OROperation</members>
+        <members>Rule</members>
+        <members>Stack</members>
+        <members>TestRuleEngine</members>
+        <members>TestRuleEngineInBulk</members>
         <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <members>Account</members>
-        <members>Case</members>
-        <members>Contact</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Profile</name>
     </types>
     <version>39.0</version>
 </Package>
